--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +31,7 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
+    "react-router-dom": "^5.1.2",
     "stylelint": "^13.2.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0"
@@ -41,8 +42,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-    ]
+    "*.js": []
   },
   "browserslist": {
     "production": [
