--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-router": "^5.2.0",
     "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0"
   },
